wip: generating schema data for source connection
