# docs/swagger.yaml
@@ -60,7 +60,6 @@ definitions:
       target:
         $ref: '#/definitions/schemas.DBConnectionRequest'
     required:
-    - description
     - name
     - source
     - target
@@ -142,6 +141,44 @@ paths:
             additionalProperties: true
             type: object
       summary: Create a project
+      tags:
+      - projects
+  /api/v1/projects/{id}/migrate:
+    post:
+      consumes:
+      - application/json
+      description: Initiates a migration from the source database to the target database
+        for the specified project
+      parameters:
+      - description: Project ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Migrate database
       tags:
       - projects
 swagger: "2.0"
