# routes/project_routes.go
@@ -10,5 +10,6 @@ func RegisterProjectRoutes(http *gin.Engine) {
 	{
 		r.POST("/", controllers.CreateProject)
 		r.GET("/", controllers.GetProjects)
+		r.POST("/:id/migrate", controllers.MigrateProject)
 	}
 }
